# fren_infrastructure_control_v4

./: .env.example  .gitignore  README.md  docker-compose.yml  opencode.json  run_autoloop.sh
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  __main__.py  checker.py  cron_runner.py  opencode_config.py  scheduler.py  settings.py  vllm_resolve.py
backend/app/agents/: __init__.py  _authoring.py  _config.py  _tooldefs.py  _tools.py  branches.py  compile.py  config.py  first_contact.py  heartbeat.py  improve.py  registry.py  (+7 more)
backend/migrations/: env.py
backend/tests/: _parity_helpers.py  test_access_gate.py  test_activity_observer.py  test_autoloop_scoring.py  test_branch_step_contracts.py  test_conversation_digest.py  test_cron_port_batch.py  test_cron_port_batch2.py  test_db_repos.py  test_delivery_gate.py  test_event_habit_bridge.py  test_first_contact.py  test_fleet_foundation.py  test_heartbeat.py  test_inner_monologue.py  test_media_routing.py  test_persona_skip.py  test_proactive_context.py  test_proactive_probes.py  test_probe_packs.py  test_runner.py  test_scheduler_enrich.py  test_send_message_gate.py  test_slash_commands.py  test_spawn_trace.py  test_stale_probes.py  test_study_domain.py  test_system_parity.py  test_tool_command_reference.py  test_tools.py  test_web_dashboard.py  test_web_life_events_artifacts.py  test_web_mind_traces.py  test_web_routes_life_events_artifacts.py  test_web_routes_mind_traces.py  test_world_clock.py  test_world_package.py  test_world_persona_integration.py  test_world_prompts.py  test_world_turn.py
(+716 files in other folders)
